--- a/Custom-Form-Validation/style.css
+++ b/Custom-Form-Validation/style.css
@@ -10,7 +10,7 @@
 }
 body{
     background-color: #f9fafb;
-    font-family:'Open Sans',sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
