--- a/DarksApp/popup.css
+++ b/DarksApp/popup.css
@@ -1,6 +1,6 @@
 html,
 body {
-        font-family: "Open Sans", sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 14px;
         margin: 0;
         min-height: 73px;
